# osm-gpui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: default.mapcss
docs/: DEVELOPMENT.md  FINAL_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  TILES.md  TILE_IMPLEMENTATION.md  TOKIO_RUNTIME_FIX.md  WEB_MERCATOR_IMPLEMENTATION.md
docs/screenshots/: select.osmscript  smoke.osmscript
docs/screenshots/fixtures/: select.osm
docs/superpowers/plans/: 2026-04-12-feature-selection.md  2026-04-12-osm-api-download.md  2026-04-12-scriptable-screenshot-harness.md  2026-04-13-editor-layer-index.md  2026-04-17-settings-window.md  issue-14-tags-table.md  issue-18-mapcss.md  issue-21-delete-layer.md  issue-22-parent-tile-template.md  issue-23-tag-table-columns.md  issue-24-ui-cleanup.md  issue-25-tile-fail-reason.md  issue-26-eli-zoom-limits.md  issue-36-custom-imagery.md  issue-6-grid-opt-in.md  issue-7-menu-redraw.md  issue-8-layer-reorder.md  issue-9-tile-parent-fallback.md
docs/superpowers/specs/: 2026-04-12-feature-selection-design.md  2026-04-12-osm-api-download-design.md  2026-04-12-scriptable-screenshot-harness-design.md  2026-04-14-custom-imagery-layers-design.md  2026-04-17-settings-window-design.md
src/: background.rs  capture.rs  coordinates.rs  custom_imagery_store.rs  data.rs  http_image_loader.rs  idle_tracker.rs  lib.rs  main.rs  map.rs  mercator.rs  osm.rs  osm_api.rs  selection.rs  tile_cache.rs  tiles.rs  viewport.rs
src/imagery/: mod.rs
src/layers/: grid_layer.rs  mod.rs  osm_layer.rs  tile_layer.rs
src/script/: mod.rs  op.rs  parser.rs  runner.rs
src/style/: mapcss.rs  mod.rs
src/ui/: custom_imagery_dialog.rs  mod.rs  modal.rs  settings_window.rs  text_input.rs
