[package]
name = "osm-gpui"
version = "0.1.0"
edition = "2021"
description = "A high-performance map rendering system built with Rust and the GPUI framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iandees/osm-gpui"
homepage = "https://github.com/iandees/osm-gpui"
documentation = "https://docs.rs/osm-gpui"
keywords = ["maps", "geospatial", "gis", "gpui", "openstreetmap"]
categories = ["graphics", "visualization", "gui"]
authors = ["Ian Dees <me@iandees.com>"]
readme = "README.md"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
quick-xml = "0.31"
rfd = "0.14"
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
image = "0.25"
anyhow = "1.0"
smallvec = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"


[dev-dependencies]

[[bin]]
name = "osm-gpui"
path = "src/main.rs"
